--- a/Zype/Info.plist
+++ b/Zype/Info.plist
@@ -34,6 +34,6 @@
 		<string>arm64</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>dark</string>
+	<string>Dark</string>
 </dict>
 </plist>
